@@ -40,6 +40,13 @@ Data exploration
 - Anonymous unions are no longer prefixed by `='.
 
 
+Source exploration
+------------------
+
+- Double-clicking on a function call (that is, an identifier followed
+  by a `(' character) will lead you to the function definition.
+
+
 Miscellaneous
 -------------
 
